testsuite/tests/properties/invalid_node_builder/not_synth.lkt
import common_empty

class Example: BaseExample {
    @lazy prop: EmptyNode = Literal.builder().build()
}
